# tak-shadowfleet-id

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  pyproject.toml  shadowfleet.json
.github/workflows/: ci.yml
src/tak_shadowfleet_id/: __init__.py  collector.py
